feat: front init first drive
